manifests/integrated-tools/base/fleetmdm/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleetmdm-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fleetmdm-server
  template:
    metadata:
      labels:
        app: fleetmdm-server
    spec:
      imagePullSecrets:
        - name: github-pat-secret

      containers:
      - name: openframe-fleetmdm
        image: openframe-fleetmdm
        ports:
        - containerPort: 8070
        livenessProbe:
          httpGet:
            path: /setup
            port: 8070
          initialDelaySeconds: 30
          periodSeconds: 10
        volumeMounts:
        - name: fleet-logs
          mountPath: /var/log/osquery
      volumes:
      - name: fleet-logs
        persistentVolumeClaim:
          claimName: fleetmdm-server
