manifests/integrated-tools/base/fleetmdm/server/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fleetmdm-server
spec:
  serviceName: fleetmdm-server
  replicas: 1
  selector:
    matchLabels:
      app: fleetmdm-server
  template:
    metadata:
      labels:
        app: fleetmdm-server
    spec:
      imagePullSecrets:
        - name: github-pat-secret

      containers:
      - name: fleetmdm
        image: fleetmdm
        ports:
        - containerPort: 8070
        livenessProbe:
          httpGet:
            path: /setup
            port: 8070
          initialDelaySeconds: 30
          periodSeconds: 10
        volumeMounts:
        - name: fleet-logs
          mountPath: /var/log/osquery

  volumeClaimTemplates:
  - metadata:
      name: fleet-logs
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
