manifests/integrated-tools/base/fleetmdm/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetmdm-server
spec:
  selector:
    app: fleetmdm-server
  ports:
  - port: 8070
    targetPort: 8070
